# simple_big_integer_library

./: CMakeLists.txt  README.md
include/: big_integer.h  catch.hpp  stl_helper_functions.hpp
src/: big_integer.cpp
test/: main_catch_tests.cpp
